--- a/gotify/config.yaml
+++ b/gotify/config.yaml
@@ -3,9 +3,8 @@ description: "A simple server for sending and receiving messages"
 version: "1.1.0"
 slug: "gotify_server"
 init: false
-ingress:
+ingress: true
 ingress_port: 80
-ingress_stream: true
 arch:
   - i386
   - aarch64
