--- a/atuin/config.yaml
+++ b/atuin/config.yaml
@@ -2,7 +2,7 @@ name: "Atuin Server"
 description: "✨ Magical shell history"
 version: "1.0.2"
 slug: "atuin"
-init: false
+url: https://github.com/edoren/hassio-addons
 arch:
   - aarch64
   - amd64
