--- a/gotify/config.yaml
+++ b/gotify/config.yaml
@@ -2,6 +2,7 @@ name: "Gotify Server"
 description: "A simple server for sending and receiving messages"
 version: "1.1.0"
 slug: "gotify_server"
+url: https://github.com/edoren/hassio-addons
 webui: http://[HOST]:[PORT:80]
 arch:
   - i386
