--- a/namecheap/config.yaml
+++ b/namecheap/config.yaml
@@ -2,7 +2,7 @@ name: "Namecheap Dynamic DNS"
 description: "Namecheap Dynamic DNS add-on!"
 version: "1.1.1"
 slug: "namecheap_dynamic_dns"
-init: false
+url: https://github.com/edoren/hassio-addons
 arch:
   - aarch64
   - amd64
