--- a/rallly/config.yaml
+++ b/rallly/config.yaml
@@ -2,11 +2,11 @@ name: "Rallly: Group Scheduling Tool"
 description: "Rallly is the fastest and easiest scheduling and collaboration tool."
 version: "1.0.3"
 slug: "rallly"
-init: false
+url: https://github.com/edoren/hassio-addons
+webui: http://[HOST]:[PORT:3000]
 arch:
   - aarch64
   - amd64
-webui: http://[HOST]:[PORT:3000]
 ports:
   3000/tcp: 3000
 options:
